sfdx-source/Modules/mail/objects/MailMessage__c/MailMessage__c.object-meta.xml
<CustomObject>
    <description>Represents a single mail message in a mail client.</description>
    <label>Mail Message</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mail Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>