sfdx-source/Modules/mail/objects/MailMessage__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The body of the sent message.</description>
    <inlineHelpText>Enter the body of the message to be sent.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>