sfdx-source/Modules/mail/objects/MailMessage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The Contact this message was sent to.</description>
    <inlineHelpText>Enter the Contact this message was sent to.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ContactMessages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>