sfdx-source/Modules/mail/objects/MailMessage__c/fields/DateSent__c.field-meta.xml
<CustomField>
    <fullName>DateSent__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The date and time this message was sent.</description>
    <inlineHelpText>Enter the date and time this message was sent.</inlineHelpText>
    <label>Date Sent</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>