sfdx-source/Modules/mail/objects/MailMessage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the message, especially whether it was sent or whether there were errors sending.</description>
    <inlineHelpText>Status of the message, especially whether it was sent or whether there were errors sending.</inlineHelpText>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>