sfdx-source/Modules/mail/objects/MailMessage__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The subject of the sent message.</description>
    <inlineHelpText>Enter the subject of the sent message, if any.</inlineHelpText>
    <label>Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>